# minhook-sys

./: Cargo.toml  LICENSE  README.md  README.tpl  build.rs  gen-bindings.sh
minhook/src/: buffer.c
src/: lib.rs
